--- a/Estoque.dproj
+++ b/Estoque.dproj
@@ -99,8 +99,25 @@
             <MainSource>MainSource</MainSource>
         </DelphiCompile>
         <DCCReference Include="unitPrincipal.pas">
-            <Form>Form1</Form>
+            <Form>frmPrincipal</Form>
             <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="unitCadProduto.pas">
+            <Form>frmCadProdutos</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="unitCadMovimentacao.pas">
+            <Form>frmCadMovimentacao</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="unitConsMovimentacao.pas">
+            <Form>frmConstMovimentacao</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="DM.pas">
+            <Form>Dmodule</Form>
+            <FormType>dfm</FormType>
+            <DesignClass>TDataModule</DesignClass>
         </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
